--- a/src/assets/html/module.html
+++ b/src/assets/html/module.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -7,32 +8,66 @@
 
 <body>
 
-<div class="container">
-    <h1>Modul Pembelajaran</h1>
+    <div class="container">
+        <h1>Modul Pembelajaran</h1>
 
-    <div class="module-box">
-        <h2>Pengenalan Aplikasi</h2>
-        <p>
-            Aplikasi ini digunakan untuk monitoring perangkat kantor. 
-            Anda wajib memahami cara penggunaan sistem sebelum melanjutkan login sebagai admin.
-        </p>
+        <div class="module-box">
+            <h2>Pengenalan Aplikasi</h2>
+            <p>
+                Aplikasi ini digunakan untuk monitoring perangkat kantor.
+                Anda wajib memahami cara penggunaan sistem sebelum melanjutkan login sebagai admin.
+            </p>
 
-        <h2>Aturan Penggunaan</h2>
-        <ul>
-            <li>Dilarang menutup aplikasi sebelum proses selesai.</li>
-            <li>Dilarang mengubah konfigurasi sistem.</li>
-            <li>Semua aktivitas dimonitor oleh sistem keamanan.</li>
-        </ul>
+            <h2>Aturan Penggunaan</h2>
+            <ul>
+                <li>Dilarang menutup aplikasi sebelum proses selesai.</li>
+                <li>Dilarang mengubah konfigurasi sistem.</li>
+                <li>Semua aktivitas dimonitor oleh sistem keamanan.</li>
+            </ul>
+        </div>
+        <!-- Tampilkan Modul -->
+        <div id="moduleContent">
+            ...
+            <button onclick="openPDF()">Lihat PDF Modul</button>
+        </div>
+
+        <!-- Tampilkan PDF -->
+        <iframe id="pdfViewer" style="display:none; width:100%; height:80vh;"></iframe>
+
+        <button id="backBtn" style="display:none;" onclick="closePDF()">
+            Kembali
+        </button>
+
+
+        <button onclick="finishModule()">Saya Sudah Mengerti</button>
     </div>
 
-    <button onclick="finishModule()">Saya Sudah Mengerti</button>
-</div>
+    <script>
+        function finishModule() {
+            chrome.webview.postMessage("finish");
+        }
+        function openPDF() {
+            chrome.webview.postMessage("open-pdf");
+        }
 
-<script>
-function finishModule() {
-    chrome.webview.postMessage("finish");
-}
-</script>
+        function closePDF() {
+            document.getElementById("pdfViewer").style.display = "none";
+            document.getElementById("backBtn").style.display = "none";
+            document.getElementById("moduleContent").style.display = "block";
+        }
+
+        chrome.webview.addEventListener("message", (event) => {
+            const pdfPath = event.data;
+
+            document.getElementById("moduleContent").style.display = "none";
+            document.getElementById("pdfViewer").style.display = "block";
+            document.getElementById("backBtn").style.display = "inline-block";
+
+            document.getElementById("pdfViewer").src = pdfPath;
+        });
+
+    </script>
 
 </body>
+
 </html>
