style:quiz style

--- a/src/assets/html/quiz.html
+++ b/src/assets/html/quiz.html
@@ -12,9 +12,11 @@
     <h1>Pertanyaan Admin</h1>
     <p>Apa huruf pertama dari kata "Resmi"?</p>
 
-    <input type="text" id="answer" placeholder="Masukkan jawaban..." />
+    <div class="form-container">
+      <input type="text" id="answer" placeholder="Masukkan jawaban..." />
 
-    <button onclick="submitAnswer()">Submit</button>
+      <button onclick="submitAnswer()">Submit</button>
+    </div>
   </div>
 
   <script src="../js/quiz.js"></script>
