--- a/src/assets/html/index.html
+++ b/src/assets/html/index.html
@@ -15,8 +15,7 @@
   <div class="header-logo">
     <img src="../img/polri.png" alt="Logo Polri Kiri" class="logo-polri">
     <h1 class="judul-text">
-      <span class="line1">E-GUESTBOOK</span>
-      <span class="line2">GEDUNG PRESISI</span>
+      <span class="line1">Quiz Rotekkinfo</span>
     </h1>
     <img src="../img/divtik.png" alt="Logo Divtik" class="logo-polri">
   </div>
@@ -24,14 +23,14 @@
 
   <!-- Container Utama -->
   <div class="container">
-    <h2>SELAMAT DATANG DI E-GUESTBOOK</h2>
+    <h2>SELAMAT DATANG</h2>
     <p class="sub-text">Silakan pilih opsi di bawah ini:</p>
     
     <div class="admin-login">
-      <button onclick="handleBtnLogin('admin')">Login Admin</button>
+      <button onclick="handleBtnLogin('admin')">Admin</button>
     </div>
     <div class="admin-login">
-      <button onclick="handleBtnLogin('user')">User Admin</button>
+      <button onclick="handleBtnLogin('user')">User</button>
     </div>
   </div>
   <!-- Logo Presisi di pojok kiri bawah -->
