--- a/src/assets/html/quiz.html
+++ b/src/assets/html/quiz.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8" />
   <title>Quiz Admin</title>
@@ -9,17 +8,15 @@
 
 <body>
   <div class="quiz-container">
-    <h1>Pertanyaan Admin</h1>
-    <p>Apa huruf pertama dari kata "Resmi"?</p>
+    <h1>Quiz Admin</h1>
 
-    <div class="form-container">
-      <input type="text" id="answer" placeholder="Masukkan jawaban..." />
-
-      <button onclick="submitAnswer()">Submit</button>
+    <div id="question-box">
+      <!-- Soal akan tampil dari JS -->
     </div>
+
+    <button id="next-btn" onclick="nextQuestion()">Lanjut</button>
   </div>
 
   <script src="../js/quiz.js"></script>
 </body>
-
 </html>
