feat:update ui password admin dan styling

--- a/src/assets/html/admin-password.html
+++ b/src/assets/html/admin-password.html
@@ -2,20 +2,19 @@
 <html lang="id">
 
 <head>
-  <link rel="stylesheet" href="../css/admin-password.css">
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../css/admin-password.css">
 </head>
 
 <body>
-  <div class="container">
-    <h1>🔐 Masukkan Password</h1>
 
-    <div class="module-box">
-      <p>Untuk melanjutkan, silakan masukkan password yang diberikan oleh kantor.</p>
+  <div class="pwd-container">
+    <h1>🔐 Password Admin</h1>
 
-      <input type="password" id="pwd" placeholder="Password..." />
-      <p id="error" class="error-text"></p>
-    </div>
+    <p>Masukkan password untuk melanjutkan ke halaman admin.</p>
+
+    <input type="password" id="pwd" placeholder="Password..." />
+    <p id="error" class="error-text"></p>
 
     <button onclick="submitPassword()">Masuk</button>
   </div>
