--- a/src/assets/html/quiz.html
+++ b/src/assets/html/quiz.html
@@ -2,13 +2,13 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Quiz Admin</title>
+  <title>Quiz User</title>
   <link rel="stylesheet" href="../css/quiz.css" />
 </head>
 
 <body>
   <div class="quiz-container">
-    <h1>Quiz Admin</h1>
+    <h1>Quiz User</h1>
 
     <div id="question-box">
       <!-- Soal akan tampil dari JS -->
