feat:ganti tulisan di password

--- a/src/assets/html/admin-password.html
+++ b/src/assets/html/admin-password.html
@@ -9,11 +9,11 @@
 <body>
 
   <div class="pwd-container">
-    <h1>🔐 Password Admin</h1>
+    <h1>🔐 Login Admin</h1>
 
-    <p>Masukkan password untuk melanjutkan ke halaman admin.</p>
+    <p>Masukkan password untuk login sebagai admin</p>
 
-    <input type="password" id="pwd" placeholder="Password..." />
+    <input type="password" id="pwd" placeholder="password" />
     <p id="error" class="error-text"></p>
 
     <button onclick="submitPassword()">Masuk</button>
